--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ numba>=0.53.1
 matplotlib>=3.3.4
 openpyxl>=3.0.9
 pandas>=1.3.5
-pyqt5<=5.15.0
-pyqtgraph==0.12.1
+pyqt5>=5.15.0
+pyqtgraph>=0.12.1
 scipy>=1.6.0
 tqdm>=4.56.0
