--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,8 +1,9 @@
 version: 2
 
 build:
-  tools:
-    python: "3.8"
+    os: ubuntu-20.04
+    tools:
+        python: "3.8"
 
 sphinx:
     configuration: doc/source/conf.py
