--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ h5py>=3.1.0
 igor>=0.3
 ipywidgets>=7.6.3
 julia>=0.5.6
-notebook>=6.4
+jupyterlab>=3.5
 jupyterthemes>=0.20.0
 numpy>=1.21.1
 numba>=0.53.1
