--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 astropy>=4.2
 data_slicer>=1.0.2
-h5py>=3.1.0
+h5py>=3.11.0
 igor2>=0.5
 ipywidgets>=7.6.3
 julia>=0.5.6
 jupyterlab>=3.5
 jupyterthemes>=0.20.0
-numpy==1.21.1
-numba==0.57.0
+numpy>=1.21.1
+numba>=0.57.0
 matplotlib>=3.3.4
 openpyxl>=3.0.9
 pandas>=1.3.5
