--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ ipywidgets>=7.6.3
 julia>=0.5.6
 jupyterlab>=3.5
 jupyterthemes>=0.20.0
-numpy>=1.21.1
+numpy<2.0.0
 numba>=0.57.0
 matplotlib>=3.3.4
 openpyxl>=3.0.9
