--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: piva
+name: piva-env
 
 channels:
   - conda-forge
@@ -6,7 +6,8 @@ channels:
   -
 dependencies:
   - python=3.10.8
-  - pip  # Ensure pip is installed in the environment
+  - pip
 
   - pip:
       - -r requirements.txt
+      - -e .
