--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,6 @@ envlist = py310, py311
 
 [testenv]
 deps = -rrequirements.txt
+# execute only specified tests
 commands =
-      pytest {posargs:piva}
+      pytest piva/tests/dataloaders_test.py piva/tests/viewers_test.py
