--- a/.github/workflows/tox-tests.yml
+++ b/.github/workflows/tox-tests.yml
@@ -18,8 +18,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+        os: ["ubuntu-latest"]
         python-version: ["3.10", "3.11"]
+#        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+#        python-version: ["3.10", "3.11"]
 
     steps:
       - name: Check out repository
@@ -37,7 +39,8 @@ jobs:
 
       - name: Run tests with Tox
         run: |
-          tox
+          tox -e py${{ matrix.python-version | replace('.', '') }} -- piva/tests/dl_tests.py
+#          tox
 
       - name: Upload coverage to Codecov
         if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10' }}
