--- a/.github/workflows/tox-tests.yml
+++ b/.github/workflows/tox-tests.yml
@@ -20,8 +20,6 @@ jobs:
       matrix:
         os: ["ubuntu-latest"]
         python-version: ["3.10", "3.11"]
-        # os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        # python-version: ["3.10", "3.11"]
 
     steps:
       - name: Check out repository
@@ -39,7 +37,7 @@ jobs:
 
       - name: Run tests with Tox
         run: >
-          tox -e py${{ matrix.python-version | replace('.', '') }}
+          tox -e py${{ matrix.python-version.replace('.', '') }}
           -- piva/tests/dl_tests.py
 
       - name: Upload coverage to Codecov
