--- a/.github/workflows/tox-tests.yml
+++ b/.github/workflows/tox-tests.yml
@@ -37,8 +37,9 @@ jobs:
 
       - name: Run tests with Tox
         run: >
-          tox -e py${{ matrix.python-version.replace('.', '') }}
-          -- piva/tests/dl_tests.py
+          python -m pytest piva/tests/dataloaders_test.py
+#          tox -e py${{ matrix.python-version.replace('.', '') }}
+#          -- piva/tests/dataloaders_test.py
 
       - name: Upload coverage to Codecov
         if: >
