--- a/.github/workflows/tox-tests.yml
+++ b/.github/workflows/tox-tests.yml
@@ -15,12 +15,12 @@ jobs:
   build-test:
 #    name: Test Run (${ { matrix.python-version } }, ${ { matrix.os } })
     name: Test Run (${{ matrix.python-version }})
-#    runs-on: ${ { matrix.os } }
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+#    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-#        os: ["ubuntu-latest"]
+        os: ["ubuntu-latest"]
         python-version: ["3.10", "3.11"]
 
     steps:
