--- a/.github/workflows/tox-tests.yml
+++ b/.github/workflows/tox-tests.yml
@@ -13,10 +13,9 @@ defaults:
 
 jobs:
   build-test:
-#    name: Test Run (${ { matrix.python-version } }, ${ { matrix.os } })
-    name: Test Run (${{ matrix.python-version }})
+    name: Test Run (${ { matrix.python-version } }, ${ { matrix.os } })
+#    name: Test Run (${{ matrix.python-version }})
     runs-on: ${{ matrix.os }}
-#    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -35,6 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          conda env create --quiet --file environment.yml
 #          python -m pip install tox tox-gh-actions
 
       - name: Run tests
