--- a/.github/workflows/tox-tests.yml
+++ b/.github/workflows/tox-tests.yml
@@ -25,21 +25,13 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-#      - name: Cache pip dependencies
-#        uses: actions/cache@v3
-#        with:
-#          path: ~/.cache/pip
-#          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-#          restore-keys: |
-#            ${{ runner.os }}-pip-
-
-      - name: Cache Conda environment
+      - name: Cache pip dependencies
         uses: actions/cache@v3
         with:
-          path: ~/conda_pkgs_dir
-          key: ${{ runner.os }}-conda-${{ hashFiles('environment.yml') }}
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-conda-
+            ${{ runner.os }}-pip-
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
@@ -50,7 +42,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           conda env create --quiet --file environment.yml
-#          python -m pip install tox tox-gh-actions
+          python -m pip install tox tox-gh-actions
 
       - name: Run tests
         run: >
