--- a/.github/workflows/tox-tests.yml
+++ b/.github/workflows/tox-tests.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Run tests
         run: >
-          echo "test2"
+          python -m piva.tests.dataloaders_test
 #          python -m pytest piva/tests/dataloaders_test.py
 #          tox -e py${{ matrix.python-version.replace('.', '') }}
 #          -- piva/tests/dataloaders_test.py
