--- a/.github/workflows/tox-tests.yml
+++ b/.github/workflows/tox-tests.yml
@@ -51,6 +51,14 @@ jobs:
         env:
           QT_QPA_PLATFORM: offscreen
         run: echo "Qt set to headless mode."
+        
+      - name: Install Xvfb
+        run: sudo apt-get install -y xvfb
+
+      - name: Start Xvfb
+        run: |
+          Xvfb :99 -screen 0 1920x1080x24 &
+          export DISPLAY=:99
 
       - name: Test viewers
         run: |
