--- a/.github/workflows/tox-tests.yml
+++ b/.github/workflows/tox-tests.yml
@@ -41,8 +41,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          conda env create --quiet --file environment.yml
-#          pip install -r requirements.txt
+          pip install -r requirements.txt
+
+      - name: Lint and check code formatting
+        run: |
+          pipx install ruff
+          ruff check --output-format=github --target-version=py39
+          ruff format --diff --target-version=py39
+        continue-on-error: true
 
       - name: Test dataloaders
         run: |
