--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,10 @@
 ---
-name: Pytest unit/integration
+name: Lint and Dataloaders Test
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
     branches:
       - main
@@ -9,7 +12,7 @@ on:
 
 defaults:
   run:
-    shell: bash  # Use bash by default in all jobs
+    shell: bash
 
 jobs:
   build-test:
@@ -18,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest"]
+        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
         python-version: ["3.10"]
 
     steps:
