--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,13 +16,13 @@ defaults:
 
 jobs:
   build-test:
-    name: Test Run (${ { matrix.python-version } }, ${ { matrix.os } })
+    name: Test Run (${{ matrix.python-version }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        python-version: ["3.10"]
+        python-version: ["3.10", "3.11"]
 
     steps:
       - name: Check out repository
