--- a/.github/workflows/test_with_coverage.yml
+++ b/.github/workflows/test_with_coverage.yml
@@ -18,6 +18,8 @@ jobs:
   build-test:
     name: Test Run (${{ matrix.python-version }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
+    env:
+      DISPLAY: ':99.0'
     strategy:
       fail-fast: false
       matrix:
@@ -59,7 +61,18 @@ jobs:
           pytest --cov=$GITHUB_WORKSPACE --cov-report=xml
           piva/tests/dataloaders_test.py
 
-      - name: Test viewers
+      - name: Test viewers - install prerequisites
+        run: >
+          sudo apt install libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0
+          libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xinerama0
+          libxcb-xfixes0 x11-utils
+
+      - name: Test viewers - configure
+          /sbin/start-stop-daemon --start --quiet --pidfile
+          /tmp/custom_xvfb_99.pid --make-pidfile --background --exec
+          /usr/bin/Xvfb -- :99 -screen 0 1920x1200x24 -ac +extension GLX
+
+      - name: Test viewers - run tests
         run: >
           pytest --cov=$GITHUB_WORKSPACE --cov-report=xml
           piva/tests/viewers_test.py
