--- a/.github/workflows/test_with_coverage.yml
+++ b/.github/workflows/test_with_coverage.yml
@@ -56,10 +56,10 @@ jobs:
           ruff format --diff --target-version=py310
         continue-on-error: true
 
-      - name: Test dataloaders
-        run: >
-          pytest --cov=$GITHUB_WORKSPACE --cov-report=xml
-          piva/tests/dataloaders_test.py
+#      - name: Test dataloaders
+#        run: >
+#          pytest --cov=$GITHUB_WORKSPACE --cov-report=xml
+#          piva/tests/dataloaders_test.py
 
       - name: Test viewers - install prerequisites
         run: >
