--- a/.github/workflows/test_with_coverage.yml
+++ b/.github/workflows/test_with_coverage.yml
@@ -78,6 +78,11 @@ jobs:
           pytest --cov=$GITHUB_WORKSPACE --cov-append --cov-report=xml
           --cov-config=.coveragerc piva/tests/viewers_test.py
 
+      - name: Test jupyter utilities
+        run: >
+          pytest --cov=$GITHUB_WORKSPACE --cov-append --cov-report=xml
+          --cov-config=.coveragerc piva/tests/jupyter_test.py
+
       - name: Upload coverage to Codecov
         if: >
           ${{ matrix.os == 'ubuntu-latest'
