--- a/.github/workflows/test_with_coverage.yml
+++ b/.github/workflows/test_with_coverage.yml
@@ -5,9 +5,9 @@ on:
   pull_request:
     branches:
       - main
-#  push:
-#    branches:
-#      - main
+  push:
+    branches:
+      - main
 
 defaults:
   run:
